--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,3 +1,15 @@
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar__container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
@@ -14,7 +26,7 @@
   gap: 1rem
 }
 
-.nav a{
+.nav-link{
   color: inherit;
   text-decoration: none;
 }
@@ -33,7 +45,7 @@
 	  -1px -1px 0 #040504;
 }
 
-.nav li.active{
+.active{
   background-color: #4a5160;
 }
 
