--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,10 +1,10 @@
-.navbar{
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.navbar__container{
+.navbar__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,34 +18,29 @@
   padding: 0 1rem;
 }
 
-.nav ul{
+.nav ul {
   display: flex;
   padding: 0;
   margin: 0;
   list-style: none;
-  gap: 1rem
+  gap: 1rem;
 }
 
-.nav-link{
-  color: inherit;
-  text-decoration: none;
+.nav-link {
+  color: aliceblue;
 }
 
-.nav li{
-  padding: .5rem;
+.nav li {
+  padding: 0.5rem;
   border-radius: 10%;
 }
 
-.nav li:hover{
+.nav li:hover {
   color: rgb(237, 229, 229);
-  text-shadow:
-    -1px 1px 0 #040504,
-	  1px 1px 0 #040504,
-	  1px -1px 0 #040504,
-	  -1px -1px 0 #040504;
+  text-shadow: -1px 1px 0 #040504, 1px 1px 0 #040504, 1px -1px 0 #040504,
+    -1px -1px 0 #040504;
 }
 
-.active{
+.active {
   background-color: #4a5160;
 }
-
