--- a/client/src/pages/home/Home.css
+++ b/client/src/pages/home/Home.css
@@ -11,7 +11,7 @@
   grid-template-columns: 50% 4fr 1fr;
   grid-template-rows: auto auto;
   grid-template-areas: "title title title" "picture content x";
-  column-gap: 10%;
+  column-gap: 3%;
 }
 
 h1 {
@@ -30,15 +30,22 @@ h1 {
   grid-area: picture;
 }
 
-.star-container {
+.home__text {
   display: flex;
   flex-direction: column;
   grid-area: content;
 }
+
+.star-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .star {
-  background-image: url("../../ui//icons//pictures/star.jpg");
+  background-image: url("../../ui/icons/png/sprocket.png");
   background-repeat: no-repeat;
-  width: 20px;
+  width: 40px;
   min-height: 20px;
   background-size: cover;
   /* background-attachment: fixed; */
