--- a/client/src/components/arrows/Arrows.css
+++ b/client/src/components/arrows/Arrows.css
@@ -1,11 +1,10 @@
 .arrows {
-  color: white;
   display: flex;
   font-size: 30px;
   justify-content: space-between;
-  height: 100%;
+  height: 30px;
   position: absolute;
-  top: 30%;
+  top: 45%;
   width: 100%;
   z-index: 1;
 }
@@ -13,6 +12,7 @@
 .arrow {
   height: 30px;
   width: 30px;
+  background-color: #fff;
 }
 
 .arrow:hover {
