--- a/client/src/components/slider/Slider.css
+++ b/client/src/components/slider/Slider.css
@@ -21,27 +21,31 @@
 .carousel-item img {
   width: 100%;
   height: 500px;
+  object-fit: cover;
 }
 
 .slide-title {
   position: absolute;
   z-index: 100;
   text-shadow: 2px 2px 2px rgb(255, 255, 255), 1em 1em 1em white;
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .title-right {
-  bottom: 20%;
+  bottom: 10%;
   left: 70%;
   margin-right: 50px;
-  color: rgb(0, 0, 0);
 }
 
-.title-top-left {
+/* .title-top-left {
   top: 10%;
   left: 10%;
   margin-right: 50px;
   color: rgb(0, 0, 0);
-}
+} */
 
 .carousel-item.visible {
   visibility: visible;
