--- a/client/src/components/our_services/OurServices.css
+++ b/client/src/components/our_services/OurServices.css
@@ -1,12 +1,19 @@
 .services {
   display: flex;
   flex-direction: column;
+  margin-top: 20px;
 }
 
 .services__content {
   display: flex;
   align-items: center;
   max-width: 80%;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.revers {
+  flex-direction: row-reverse;
 }
 
 .services__img {
