--- a/client/src/pages/contacts/Contacts.css
+++ b/client/src/pages/contacts/Contacts.css
@@ -12,6 +12,11 @@
   padding-bottom: 10px;
 }
 
+.contacts__text h2,
+p {
+  margin: 10px;
+}
+
 .contacts__phone {
   display: flex;
   align-items: center;
@@ -22,4 +27,16 @@
 
 .contacts__phone img {
   width: 25px;
+}
+
+.operating-mode {
+  padding: 0 20px;
+}
+
+.operating-mode h4 {
+  margin: 5px;
+}
+
+.operating-mode p {
+  margin: 5px;
 }
